# DataAnalytics

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  devcontainer.json  pyproject.toml
.github/workflows/: nightly_pipeline.yml
data/processed/exports/: program_month_sentiment.csv
docs/: FoodHubProblemStatementAssignment (1).html  index.html
src/analytics/: aggregates.py
src/ingest/: gdelt_ingest.py  reddit_ingest.py  youtube_ingest.py
src/nlp/: azure_sentiment  local_sentiment.py
src/transform/: clean_normalize  clean_normalize.py
src/viz/: build_site  build_site.py
tdlr-supplementary-sources/: README_SUPPLEMENTARY.md
tdlr-supplementary-sources/docs/: workflow_snippet.txt
tdlr-supplementary-sources/src/ingest/: gdelt_ingest.py
